[tool.poetry]
name = "raglocal-202404"
version = "0.1.0"
description = ""
authors = ["Shuichi Kataoka <shu01k9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.76"
openai = "^1.16.1"
langchain = "^0.1.14"
llama-index = "^0.10.26"
pypdf = "^4.1.0"
python-dotenv = "^1.0.1"
llama-index-embeddings-huggingface = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
